--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ComposeMoviesApp</string>
+    <string name="title_tab_movies">Movies</string>
+    <string name="title_tab_favorites">Favorites</string>
 </resources>
